diseño empezado, ya estan los comentarios en los forms de los compradores

--- a/WinFormsProyectoFinal/Carrito.resx
+++ b/WinFormsProyectoFinal/Carrito.resx
@@ -2511,4 +2511,7 @@
         Q4YMGTJkyJAhQ4YMGTJkyJAhQ4YMGTJkyJAhQ4YMGTL0M9O/+Tf/f2Qbkv3XCpGVAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>158, 17</value>
+  </metadata>
 </root>
