--- a/WinFormsProyectoFinal/FormProducto.resx
+++ b/WinFormsProyectoFinal/FormProducto.resx
@@ -169,4 +169,7 @@
         ih1+VzuO4ziO4ziOsxq2bPk/FOIqCho/IT0AAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
