--- a/WinFormsProyectoFinal/Properties/Resources.resx
+++ b/WinFormsProyectoFinal/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="uaa" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\uaa.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="f2.7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\f2.7.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
